--- a/DeepSeekChat/DeepSeekChat.csproj
+++ b/DeepSeekChat/DeepSeekChat.csproj
@@ -27,6 +27,67 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Configs\Agents\CSharp\CSharpCodingAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CommandLine\CommandConfirmAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CommandLine\CommandExecuteAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CSharp\CSharpDesignForComplexConsoleAgent.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CSharp\CSharpDesignForComplexWPFAgent.json">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CSharp\CSharpDesignForSimpleConsoleAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CSharp\CSharpDesignForSimpleWPFAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CSharp\CSharpRequirementAnalysisAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\ReactTypeScript\ReactTypeScriptCodingAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\ReactTypeScript\ReactTypeScriptCodingTaskCreateAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\ReactTypeScript\ReactTypeScriptDesignForSPAAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\ReactTypeScript\ReactTypeScriptRequirementAnalysisAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\Review\ReviewConfirmAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\Review\ReviewHandleAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\CSharp\CSharpCodingTaskCreateAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\UserIntent\UserIntentAnalysisAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\UserIntent\UserIntentDecompositionAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Agents\UserIntent\UserIntentTaskCreateAgent.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Configs\Tools\ToolsConfig.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Configs\ToolCalls\" />
   </ItemGroup>
 
 </Project>
